<resources>
    <string name="app_name">SensorApp</string>
    <string name="profile">Profile</string>
    <string name="start_run">Start run</string>
    <string name="past_runs">Past runs</string>
    <string name="recent_runs">Recent runs</string>
    <string name="tts_with_hours">Distance: %1$s kilometers. Time: %2$s hours, %3$s minutes, %4$s seconds. Pace: %5$s minutes per kilometer</string>
    <string name="tts_with_minutes">Distance: %1$s kilometers. Time: %2$s minutes, %3$s seconds. Pace: %4$s minutes per kilometer</string>
    <string name="tts_with_seconds">Distance: %1$s kilometers. Time: %2$d seconds.</string>
    <string name="tts_pace">Pace: %1$s minutes per kilometer</string>
    <string name="timer_placeholder">00:00:00</string>
    <string name="distance_placeholder">0.00 km</string>
    <string name="time_distance_placeholder">0 km in 00:00:00</string>
    <string name="time_distance">%1$s km in %2$s</string>
    <string name="run_completed_at_placeholder">Run completed on xx.xx.xx</string>
    <string name="run_completed_at">Run completed on %1$s %2$s</string>
    <string name="pace_placeholder">Pace: x min / km</string>
    <string name="pace">Pace: %1$s min / km</string>
    <string name="btn_start_run">START RUN</string>
    <string name="btn_stop_run">STOP RUN</string>
    <string name="btn_no_runs">No tracked runs found. Get running!</string>
    <string name="cd_profile">Profile logo</string>
    <string name="cd_arrow">Arrow image</string>

    <!-- Main activity -->
    <string name="main_noLocationAccessToast">You must give access to your location for this app to work correctly.</string>

    <!-- Profile -->
    <string name="editText_nameEnter">Enter new username here</string>
    <string name="profile_btn_close">close</string>
    <string name="profile_btn_confirm">Confirm</string>
    <string name="profile_emptyNameToast">Username can not be empty.</string>
    <string name="profile_title">Profile</string>

    <!-- Profile settings -->
    <string name="profileSettings_settingTitle">Profile settings</string>
    <string name="profileSettings_changeUsernameTitle">Change username</string>


    <!-- Weather fragment -->
    <string name="weather_noLocationErrorToast">You must give access to your location for this app to work correctly.</string>
    <string name="weather_noLocationError">You must give access to your location to show the weather.</string>
    <string name="weather_backgroundContentDescription">Weather background</string>
    <string name="weather_errorIconContentDescription">Error icon</string>
    <string name="weather_refreshIconContentDescription">Refresh icon</string>
    <string name="weather_weatherImageContentDescription">Image representing current weather</string>
    <string name="weather_invalidWeatherError">Error: Could not get weather.</string>
    <string name="weather_loadError">Error: Could not load weather.</string>

    <!-- Weathers -->
    <string name="thunderstorm_with_light_rain">Thunderstorm</string>
    <string name="thunderstorm_with_rain">Thunderstorm</string>
    <string name="thunderstorm_with_heavy_rain">Thunderstorm</string>
    <string name="light_thunderstorm">Thunderstorm</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="heavy_thunderstorm">Thunderstorm</string>
    <string name="ragged_thunderstorm">Thunderstorm</string>
    <string name="thunderstorm_with_light_drizzle">Thunderstorm</string>
    <string name="thunderstorm_with_drizzle">Thunderstorm</string>
    <string name="thunderstorm_with_heavy_drizzle">Thunderstorm</string>

    <string name="light_intensity_drizzle">Light Drizzle</string>
    <string name="drizzle">Drizzle</string>
    <string name="heavy_intensity_drizzle">Drizzle</string>
    <string name="drizzle_rain">Drizzle</string>
    <string name="heavy_intensity_drizzle_rain">Drizzle</string>
    <string name="shower_rain_and_drizzle">Drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">Drizzle</string>
    <string name="shower_drizzle">Drizzle</string>

    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Rain</string>
    <string name="heavy_intensity_rain">Heavy rain</string>
    <string name="very_heavy_rain">Heavy rain</string>
    <string name="extreme_rain">Heavy rain</string>
    <string name="freezing_rain">Rain</string>
    <string name="light_intensity_shower_rain">Rain</string>
    <string name="shower_rain">Rain</string>
    <string name="heavy_intensity_shower_rain">Rain</string>
    <string name="ragged_shower_rain">Rain</string>

    <string name="light_snow">Light snow</string>
    <string name="Snow">Snow</string>
    <string name="Heavy_snow">Snow</string>
    <string name="Sleet">Sleet</string>
    <string name="Light_shower_sleet">Sleet</string>
    <string name="Shower_sleet">Sleet</string>
    <string name="Light_rain_and_snow">Snow</string>
    <string name="Rain_and_snow">Snow</string>
    <string name="Light_shower_snow">Snow</string>
    <string name="Shower_snow">Snow</string>
    <string name="Heavy_shower_snow">Snow</string>

    <string name="mist">Mist</string>
    <string name="Smoke">Mist</string>
    <string name="Haze">Mist</string>
    <string name="sand_dust_whirls">Mist</string>
    <string name="fog">Fog</string>
    <string name="sand">Mist</string>
    <string name="dust">Mist</string>
    <string name="volcanic_ash">Mist</string>
    <string name="squalls">Mist</string>
    <string name="tornado">Mist</string>

    <string name="clear_sky">Clear sky</string>

    <string name="few_clouds">Partly cloudy</string>
    <string name="scattered_clouds">Cloudy</string>
    <string name="broken_clouds">Cloudy</string>
    <string name="overcast_clouds">Cloudy</string>

    <!-- Name adding strings -->
    <string name="name_enterName">Enter your username here</string>
    <string name="name_enterNameAutofillHint">username</string>
    <string name="name_btn_enter">Enter</string>
    <string name="name_errorMsg">Username can not be empty.</string>
    <string name="name_LogoContentDescription">App logo</string>

</resources>
