<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editText_newUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/name_enterNameAutofillHint"
        android:ems="10"
        android:hint="@string/editText_nameEnter"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_nameChange_popup_cancel"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_extralight"
            android:text="@string/profile_btn_close"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_nameChange_popup_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight=".50"
            android:background="@drawable/button_background"
            android:fontFamily="@font/nunito_extralight"
            android:text="@string/profile_btn_confirm"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>