<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_addName"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/name_btn_enter"
        android:textColor="@color/colorWhite"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintEnd_toEndOf="@+id/editText_name"
        app:layout_constraintStart_toStartOf="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name_enterNameAutofillHint"
        android:ems="10"
        android:hint="@string/name_enterName"
        android:inputType="textPersonName"
        android:maxLength="14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_name"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_name"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/name_LogoContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>